# So-long

./: Makefile  README.md
So long/: Makefile  file.txt  so_long
So long/headers/: constants.h  file.h  game.h  graphic.h  map.h  map_validator.h  util.h
So long/images/: Y.xpm  aqui.xpm  exit.xpm  moneda.xpm  p.xpm  si.xpm  wall_2.xpm
So long/maps/: map.ber  map.txt  map_len_lines_different.ber
So long/src/: controls.c  file.c  game.c  get_next_line.c  get_next_line_utils.c  graphic.c  main.c  map.c  util.c  (+1 more)
So_long/: CMakeLists.txt  Makefile  make.txt  model.txt  so_long
So_long/ft_printf/: Makefile
So_long/ft_printf/Includes/: ft_printf.h
So_long/ft_printf/Src/: format_char.c  format_digit.c  format_ptr.c  format_str.c  format_unsigned.c  ft_printf.c  ft_putchar.c  ft_putstr.c
So_long/get_next_line/: get_next_line.c  get_next_line.h
So_long/headers/: constants.h  element.h  file.h  file_validator.h  game.h  get_next_line.h  graphic.h  juego.h  map.h  map_validator.h  position.h  util.h
So_long/images/: sr2c62ac69cb385 (convert.io).xpm
So_long/mlx/test/: mlx-test
So_long/src/: element.c  file.c  file_validator.c  game.c  graphic.c  juego.c  main.c  map.c  map_validator.c  so_long.c  util.c
headers/: constants.h  file.h  game.h  get_next_line.h  map.h  map_validator.h  util.h
images/: B.xpm  collectable.xpm  original.xpm  w.xpm  wall.xpm
maps/: map.ber  map_path_invalid.ber  map_symbol_unrecognize.ber  map_with_many_exits.ber
src/: element.c  game.c  get_next_line.c  get_next_line_utils.c  graphic.c  main.c  path_check.c  split.c  util.c
(+28 files in other folders)
